# Qna-Document-RAG-using-Nvidia

./: app.py  finalapp.py  main.py  pyproject.toml  requirements.txt
