[project]
name = "nvidia-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-nvidia-ai-endpoints>=0.3.10",
    "openai>=1.78.1",
    "pypdf>=5.5.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]
